2025-03-05T01:47:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13666706311 # 584
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-05
* notice: last 14d: unq all: 6 16
* notice: prev accum: outdated-unq outdated-all / unq all: 914 1394 / 932 1412
* notice: next accum: outdated-unq outdated-all / unq all: 917 1397 / 933 1413
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-18 2025-02-19] / [2025-03-04]

2025-03-04T01:47:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13644443621 # 583
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-04
* notice: last 14d: unq all: 7 17
* notice: prev accum: outdated-unq outdated-all / unq all: 914 1394 / 931 1411
* notice: next accum: outdated-unq outdated-all / unq all: 914 1394 / 932 1412
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-18 2025-03-03]

2025-03-03T01:48:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13621721590 # 582
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-03
* notice: last 14d: unq all: 7 17
* notice: prev accum: outdated-unq outdated-all / unq all: 913 1393 / 930 1410
* notice: next accum: outdated-unq outdated-all / unq all: 914 1394 / 931 1411
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-17] / [2025-03-02]

2025-03-02T01:50:53Z: