@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-05T01:47:35Z",
-  "count_outdated" : 1397,
-  "uniques_outdated" : 917,
+  "timestamp" : "2025-03-06T01:47:46Z",
+  "count_outdated" : 1398,
+  "uniques_outdated" : 918,
   "count" : 1413,
   "uniques" : 933,
   "clones" : [
-    {
-      "timestamp": "2025-02-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-21T00:00:00Z",
       "count": 1,
