@@ -1,3 +1,12 @@
+2025-03-06T01:47:46Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13689366286 # 585
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-06
+* notice: last 14d: unq all: 6 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 917 1397 / 933 1413
+* notice: next accum: outdated-unq outdated-all / unq all: 918 1398 / 933 1413
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-02-20] / []
+
 2025-03-05T01:47:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13666706311 # 584
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-05
